tests/baselines/reference/collisionThisExpressionAndLocalVarInFunction(strict=true).errors.txt
collisionThisExpressionAndLocalVarInFunction.ts(2,5): error TS7010: 'log', which lacks return-type annotation, implicitly has an 'any' return type.
collisionThisExpressionAndLocalVarInFunction.ts(6,5): error TS7006: Parameter 'x' implicitly has an 'any' type.
collisionThisExpressionAndLocalVarInFunction.ts(6,24): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== collisionThisExpressionAndLocalVarInFunction.ts (3 errors) ====
    var console: {
        log(val: any);
        ~~~~~~~~~~~~~~
!!! error TS7010: 'log', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    function x() {
        var _this = 5;
        x => { console.log(this.x); };
        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                           ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }